--- a/index.html
+++ b/index.html
@@ -4,83 +4,91 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Template</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
     <header>
       <nav>
-        <a href="/"><img src="./images/Union.svg" alt="icons" />photo</a>
+        <a href="/" class="logo"
+          ><img src="./images/Union.svg" alt="icons" />photo</a
+        >
 
-        <ul>
-          <li><a href="">Features</a></li>
-          <li><a href="">Pricing</a></li>
-          <li><a href="">Community</a></li>
-          <li><a href="">Support</a></li>
+        <ul class="site-nav list">
+          <li><a class="link current" href="">Features</a></li>
+          <li><a class="link" href="">Pricing</a></li>
+          <li><a class="link" href="">Community</a></li>
+          <li><a class="link" href="">Support</a></li>
         </ul>
 
-        <ul>
-          <li><a href="">Log in</a></li>
-          <li><a href="">Register</a></li>
+        <ul class="nav-auth list">
+          <li><a class="button primary" href="">Log in</a></li>
+          <li><a class="button secondary" href="">Register</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <!-- Герой -->
-      <section>
-        <h1>The largest community of photo enthusiasts</h1>
-        <a href="">Join Today</a>
+      <!-- Hero -->
+      <section class="hero">
+        <h1 class="hero-title">The largest community of photo enthusiasts</h1>
+        <a href="" class="button secondary">Join Today</a>
       </section>
-      <!-- Преимущества -->
-      <section>
-        <h2>
+      <!-- Features -->
+      <section class="section">
+        <h2 class="section-title">
           Snap photos and share like <br />
           never before
         </h2>
-        <ul>
+        <ul class="features list">
           <li>
-            <h3>Sed ut perspiciatis</h3>
-            <p>
+            <h3 class="subtitle">Sed ut perspiciatis</h3>
+            <p class="text">
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
               aut fugit, sed quia consequuntur magni dolores eos qui ratione
               voluptatem sequi nesciunt. Neque porro quisquam est.
             </p>
-            <a href="">Learn more</a>
+            <a href="" class="button primary">Learn more</a>
           </li>
           <li>
-            <h3>Nemo enim ipsam</h3>
-            <p>
+            <h3 class="subtitle">Nemo enim ipsam</h3>
+            <p class="text">
               Consequuntur magni dolores eos qui ratione voluptatem sequi
               nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
               sit amet, consectetur, adipisci velit, sed quia non numquam.
             </p>
-            <a href="">Learn more</a>
+            <a href="" class="button primary">Learn more</a>
           </li>
           <li>
-            <h3>Lorem ipsum dolor</h3>
-            <p>
+            <h3 class="subtitle">Lorem ipsum dolor</h3>
+            <p class="text">
               Amet, consectetur adipiscing elit, sed do eiusmod tempor
               incididunt ut labore et dolore magna aliqua. Ut enim ad minim
               veniam, quis nostrud exercitation ullamco laboris nisi.
             </p>
-            <a href="">Learn more</a>
+            <a href="" class="button primary">Learn more</a>
           </li>
           <li>
-            <h3>Tempor incididunt</h3>
-            <p>
+            <h3 class="subtitle">Tempor incididunt</h3>
+            <p class="text">
               Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
               est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
               velit, sed quia non numquam eius modi tempora.
             </p>
-            <a href="">Learn more</a>
+            <a href="" class="button primary">Learn more</a>
           </li>
         </ul>
       </section>
 
       <!-- Примеры работ -->
-      <section>
-        <h2>Примеры работ</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Примеры работ</h2>
+        <ul class="work list">
           <li>
             <img
               src="./images/Rectangle.png"
@@ -88,8 +96,8 @@
               width="750"
               height="440"
             />
-            <h3>Sed ut perspiciatis unde omnis</h3>
-            <p>
+            <h3 class="subtitle">Sed ut perspiciatis unde omnis</h3>
+            <p class="text">
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
               aut fugit, sed quia consequuntur magni dolores eos qui ratione
               voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
@@ -102,8 +110,8 @@
               width="750"
               height="440"
             />
-            <h3>Sed ut perspiciatis unde omnis</h3>
-            <p>
+            <h3 class="subtitle">Sed ut perspiciatis unde omnis</h3>
+            <p class="text">
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
               aut fugit, sed quia consequuntur magni dolores eos qui ratione
               voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
@@ -111,14 +119,14 @@
           </li>
         </ul>
       </section>
-      <!-- Oтзывы -->
-      <section>
-        <h2>You`re in good company</h2>
-        <p>
+      <!-- Feedback -->
+      <section class="section">
+        <h2 class="section-title">You`re in good company</h2>
+        <p class="feedback-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore
         </p>
-        <ul>
+        <ul class="feedback-list list">
           <li>
             <a href=""
               ><img src="./images/Rectangle.svg" alt="Логотип компании"
@@ -162,35 +170,43 @@
         </ul>
       </section>
       <!-- регистрация -->
-      <section>
-        <p>
+      <section class="section">
+        <p class="singup-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore
         </p>
-        <a href="">Join Today</a>
-        <a href="">Contact us</a>
+        <a href="" class="button primary">Join Today</a>
+        <a href="" class="button secondary">Contact us</a>
       </section>
     </main>
     <!-- Футер -->
     <footer>
-      <ul>
-        <li><a href="">Mobile app</a></li>
-        <li><a href="">Community</a></li>
-        <li><a href="">Company</a></li>
+      <ul class="footer-list list">
+        <li><a class="footer-link" href="">Mobile app</a></li>
+        <li><a class="footer-link" href="">Community</a></li>
+        <li><a class="footer-link" href="">Company</a></li>
       </ul>
-      <a href=""><img src="./images/Union.svg" alt="icons" />photo</a>
-      <ul>
-        <li><a href="">Help desk</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Resources</a></li>
+      <a href="" class="logo"
+        ><img src="./images/Union.svg" alt="icons" />photo</a
+      >
+      <ul class="footer-list list">
+        <li><a class="footer-link" href="">Help desk</a></li>
+        <li><a class="footer-link" href="">Blog</a></li>
+        <li><a class="footer-link" href="">Resources</a></li>
       </ul>
-      <ul>
-        <li><a href="" aria-label="Facebook">Facebook</a></li>
-        <li><a href="" aria-label="LinkedIn">LinkedIn</a></li>
-        <li><a href="" aria-label="Twitter">Twitter</a></li>
-        <li><a href="" aria-label="Telegram">Telegram</a></li>
+      <ul class="soc-list list">
+        <li>
+          <a class="soc-link" href="" aria-label="Facebook">Facebook</a>
+        </li>
+        <li>
+          <a class="soc-link" href="" aria-label="LinkedIn">LinkedIn</a>
+        </li>
+        <li><a class="soc-link" href="" aria-label="Twitter">Twitter</a></li>
+        <li>
+          <a class="soc-link" href="" aria-label="Telegram">Telegram</a>
+        </li>
       </ul>
-      <p>&#169; Photo, Inc. 2019. We love our users!</p>
+      <p class="footer-text">&#169; Photo, Inc. 2019. We love our users!</p>
     </footer>
   </body>
 </html>
