add margin and padding

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <nav>
+      <nav class="container">
         <a href="/" class="logo"
           ><img src="./images/Union.svg" alt="icons" />photo</a
         >
@@ -43,177 +43,191 @@
     <main>
       <!-- Hero -->
       <section class="hero">
-        <h1 class="hero-title">The largest community of photo enthusiasts</h1>
-        <a href="" class="button secondary">Join Today</a>
+        <div class="container">
+          <h1 class="hero-title">The largest community of photo enthusiasts</h1>
+          <a href="" class="button secondary">Join Today</a>
+        </div>
       </section>
       <!-- Features -->
       <section class="section">
-        <h2 class="section-title">
-          Snap photos and share like <br />
-          never before
-        </h2>
-        <ul class="features list">
-          <li>
-            <h3 class="subtitle">Sed ut perspiciatis</h3>
-            <p class="text">
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est.
-            </p>
-            <a href="" class="button primary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="subtitle">Nemo enim ipsam</h3>
-            <p class="text">
-              Consequuntur magni dolores eos qui ratione voluptatem sequi
-              nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
-              sit amet, consectetur, adipisci velit, sed quia non numquam.
-            </p>
-            <a href="" class="button primary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="subtitle">Lorem ipsum dolor</h3>
-            <p class="text">
-              Amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi.
-            </p>
-            <a href="" class="button primary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="subtitle">Tempor incididunt</h3>
-            <p class="text">
-              Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
-              est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci
-              velit, sed quia non numquam eius modi tempora.
-            </p>
-            <a href="" class="button primary">Learn more</a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title left">
+            Snap photos and share like <br />
+            never before
+          </h2>
+          <ul class="features list">
+            <li>
+              <h3 class="subtitle">Sed ut perspiciatis</h3>
+              <p class="text">
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est.
+              </p>
+              <a href="" class="button primary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="subtitle">Nemo enim ipsam</h3>
+              <p class="text">
+                Consequuntur magni dolores eos qui ratione voluptatem sequi
+                nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+                sit amet, consectetur, adipisci velit, sed quia non numquam.
+              </p>
+              <a href="" class="button primary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="subtitle">Lorem ipsum dolor</h3>
+              <p class="text">
+                Amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi.
+              </p>
+              <a href="" class="button primary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="subtitle">Tempor incididunt</h3>
+              <p class="text">
+                Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
+                est, qui dolorem ipsum quia dolor sit amet, consectetur,
+                adipisci velit, sed quia non numquam eius modi tempora.
+              </p>
+              <a href="" class="button primary">Learn more</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Примеры работ -->
-      <section class="section">
-        <h2 class="section-title">Примеры работ</h2>
-        <ul class="work list">
-          <li>
-            <img
-              src="./images/Rectangle.png"
-              alt="photo1"
-              width="750"
-              height="440"
-            />
-            <h3 class="subtitle">Sed ut perspiciatis unde omnis</h3>
-            <p class="text">
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
-            </p>
-          </li>
-          <li>
-            <img
-              src="./images/Rectangle.png"
-              alt="photo2"
-              width="750"
-              height="440"
-            />
-            <h3 class="subtitle">Sed ut perspiciatis unde omnis</h3>
-            <p class="text">
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
-            </p>
-          </li>
-        </ul>
+      <section class="section no-padding">
+        <div class="container">
+          <h2 class="section-title">Примеры работ</h2>
+          <ul class="work-list list">
+            <li class="work-item">
+              <img
+                src="./images/Rectangle.png"
+                alt="photo1"
+                width="750"
+                height="440"
+              />
+              <h3 class="subtitle">Sed ut perspiciatis unde omnis</h3>
+              <p class="text">
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est, qui
+                dolorem.
+              </p>
+            </li>
+            <li class="work-item">
+              <img
+                src="./images/Rectangle.png"
+                alt="photo2"
+                width="750"
+                height="440"
+              />
+              <h3 class="subtitle">Sed ut perspiciatis unde omnis</h3>
+              <p class="text">
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est, qui
+                dolorem.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Feedback -->
       <section class="section">
-        <h2 class="section-title">You`re in good company</h2>
-        <p class="feedback-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore
-        </p>
-        <ul class="feedback-list list">
-          <li>
-            <a href=""
-              ><img src="./images/Rectangle.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/Rectangle.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/Rectangle.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/Rectangle.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/Rectangle.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/Rectangle.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/Rectangle.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/Rectangle.svg" alt="Логотип компании"
-            /></a>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">You`re in good company</h2>
+          <p class="feedback-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore
+          </p>
+          <ul class="feedback-list list">
+            <li>
+              <a href=""
+                ><img src="./images/Rectangle.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/Rectangle.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/Rectangle.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/Rectangle.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/Rectangle.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/Rectangle.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/Rectangle.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/Rectangle.svg" alt="Логотип компании"
+              /></a>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- регистрация -->
       <section class="section">
-        <p class="singup-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore
-        </p>
-        <a href="" class="button primary">Join Today</a>
-        <a href="" class="button secondary">Contact us</a>
+        <div class="container">
+          <p class="singup-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore
+          </p>
+          <a href="" class="button primary">Join Today</a>
+          <a href="" class="button secondary">Contact us</a>
+        </div>
       </section>
     </main>
     <!-- Футер -->
     <footer>
-      <ul class="footer-list list">
-        <li><a class="footer-link" href="">Mobile app</a></li>
-        <li><a class="footer-link" href="">Community</a></li>
-        <li><a class="footer-link" href="">Company</a></li>
-      </ul>
-      <a href="" class="logo"
-        ><img src="./images/Union.svg" alt="icons" />photo</a
-      >
-      <ul class="footer-list list">
-        <li><a class="footer-link" href="">Help desk</a></li>
-        <li><a class="footer-link" href="">Blog</a></li>
-        <li><a class="footer-link" href="">Resources</a></li>
-      </ul>
-      <ul class="soc-list list">
-        <li>
-          <a class="soc-link" href="" aria-label="Facebook">Facebook</a>
-        </li>
-        <li>
-          <a class="soc-link" href="" aria-label="LinkedIn">LinkedIn</a>
-        </li>
-        <li><a class="soc-link" href="" aria-label="Twitter">Twitter</a></li>
-        <li>
-          <a class="soc-link" href="" aria-label="Telegram">Telegram</a>
-        </li>
-      </ul>
-      <p class="footer-text">&#169; Photo, Inc. 2019. We love our users!</p>
+      <div class="container">
+        <ul class="footer-list list">
+          <li><a class="footer-link" href="">Mobile app</a></li>
+          <li><a class="footer-link" href="">Community</a></li>
+          <li><a class="footer-link" href="">Company</a></li>
+        </ul>
+        <a href="" class="logo"
+          ><img src="./images/Union.svg" alt="icons" />photo</a
+        >
+        <ul class="footer-list list">
+          <li><a class="footer-link" href="">Help desk</a></li>
+          <li><a class="footer-link" href="">Blog</a></li>
+          <li><a class="footer-link" href="">Resources</a></li>
+        </ul>
+        <ul class="soc-list list">
+          <li>
+            <a class="soc-link" href="" aria-label="Facebook">Facebook</a>
+          </li>
+          <li>
+            <a class="soc-link" href="" aria-label="LinkedIn">LinkedIn</a>
+          </li>
+          <li><a class="soc-link" href="" aria-label="Twitter">Twitter</a></li>
+          <li>
+            <a class="soc-link" href="" aria-label="Telegram">Telegram</a>
+          </li>
+        </ul>
+        <p class="footer-text">&#169; Photo, Inc. 2019. We love our users!</p>
+      </div>
     </footer>
   </body>
 </html>
