--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
   <body>
     <!-- Шапка сайта -->
     <header>
-      <nav class="container">
+      <nav class="container header-nav">
         <a href="/" class="logo"
           ><img src="./images/Union.svg" alt="icons" />photo</a
         >
 
         <ul class="site-nav list">
-          <li><a class="link current" href="">Features</a></li>
-          <li><a class="link" href="">Pricing</a></li>
-          <li><a class="link" href="">Community</a></li>
-          <li><a class="link" href="">Support</a></li>
+          <li class="item"><a class="link current" href="">Features</a></li>
+          <li class="item"><a class="link" href="">Pricing</a></li>
+          <li class="item"><a class="link" href="">Community</a></li>
+          <li class="item"><a class="link" href="">Support</a></li>
         </ul>
 
         <ul class="nav-auth list">
-          <li><a class="button primary" href="">Log in</a></li>
-          <li><a class="button secondary" href="">Register</a></li>
+          <li class="item"><a class="button primary" href="">Log in</a></li>
+          <li class="item"><a class="button secondary" href="">Register</a></li>
         </ul>
       </nav>
     </header>
@@ -55,8 +55,8 @@
             Snap photos and share like <br />
             never before
           </h2>
-          <ul class="features list">
-            <li>
+          <ul class="features-list list">
+            <li class="item">
               <h3 class="subtitle">Sed ut perspiciatis</h3>
               <p class="text">
                 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
@@ -65,7 +65,7 @@
               </p>
               <a href="" class="button primary">Learn more</a>
             </li>
-            <li>
+            <li class="item">
               <h3 class="subtitle">Nemo enim ipsam</h3>
               <p class="text">
                 Consequuntur magni dolores eos qui ratione voluptatem sequi
@@ -74,7 +74,7 @@
               </p>
               <a href="" class="button primary">Learn more</a>
             </li>
-            <li>
+            <li class="item">
               <h3 class="subtitle">Lorem ipsum dolor</h3>
               <p class="text">
                 Amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -83,7 +83,7 @@
               </p>
               <a href="" class="button primary">Learn more</a>
             </li>
-            <li>
+            <li class="item">
               <h3 class="subtitle">Tempor incididunt</h3>
               <p class="text">
                 Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
@@ -96,40 +96,45 @@
         </div>
       </section>
 
-      <!-- Примеры работ -->
+      <!-- Examples works -->
       <section class="section no-padding">
         <div class="container">
-          <h2 class="section-title">Примеры работ</h2>
+          <h2 class="section-title">Examples</h2>
           <ul class="work-list list">
-            <li class="work-item">
+            <li class="item">
               <img
                 src="./images/Rectangle.png"
                 alt="photo1"
                 width="750"
                 height="440"
               />
-              <h3 class="subtitle">Sed ut perspiciatis unde omnis</h3>
-              <p class="text">
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-                aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                voluptatem sequi nesciunt. Neque porro quisquam est, qui
-                dolorem.
-              </p>
+              <div class="content">
+                <h3 class="subtitle">Sed ut perspiciatis unde omnis</h3>
+                <p class="text">
+                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+                  odit aut fugit, sed quia consequuntur magni dolores eos qui
+                  ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+                  qui dolorem.
+                </p>
+              </div>
             </li>
-            <li class="work-item">
+
+            <li class="item">
               <img
                 src="./images/Rectangle.png"
                 alt="photo2"
                 width="750"
                 height="440"
               />
-              <h3 class="subtitle">Sed ut perspiciatis unde omnis</h3>
-              <p class="text">
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-                aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                voluptatem sequi nesciunt. Neque porro quisquam est, qui
-                dolorem.
-              </p>
+              <div class="content">
+                <h3 class="subtitle">Sed ut perspiciatis unde omnis</h3>
+                <p class="text">
+                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+                  odit aut fugit, sed quia consequuntur magni dolores eos qui
+                  ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+                  qui dolorem.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
@@ -143,42 +148,42 @@
             eiusmod tempor incididunt ut labore
           </p>
           <ul class="feedback-list list">
-            <li>
+            <li class="item">
               <a href=""
                 ><img src="./images/Rectangle.svg" alt="Логотип компании"
               /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img src="./images/Rectangle.svg" alt="Логотип компании"
               /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img src="./images/Rectangle.svg" alt="Логотип компании"
               /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img src="./images/Rectangle.svg" alt="Логотип компании"
               /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img src="./images/Rectangle.svg" alt="Логотип компании"
               /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img src="./images/Rectangle.svg" alt="Логотип компании"
               /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img src="./images/Rectangle.svg" alt="Логотип компании"
               /></a>
             </li>
-            <li>
+            <li class="item">
               <a href=""
                 ><img src="./images/Rectangle.svg" alt="Логотип компании"
               /></a>
@@ -187,42 +192,48 @@
         </div>
       </section>
       <!-- регистрация -->
-      <section class="section">
-        <div class="container">
+      <section class="section section-singup">
+        <div class="container singup">
           <p class="singup-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore
+            Lorem ipsum dolor sit amet, consectetur adipiscing <br />
+            elit, sed do eiusmod tempor incididunt ut labore
           </p>
-          <a href="" class="button primary">Join Today</a>
-          <a href="" class="button secondary">Contact us</a>
+          <div class="singup-link">
+            <a href="" class="button secondary">Join Today</a>
+            <a href="" class="button primary">Contact us</a>
+          </div>
         </div>
       </section>
     </main>
     <!-- Футер -->
-    <footer>
+    <footer class="section">
       <div class="container">
-        <ul class="footer-list list">
-          <li><a class="footer-link" href="">Mobile app</a></li>
-          <li><a class="footer-link" href="">Community</a></li>
-          <li><a class="footer-link" href="">Company</a></li>
-        </ul>
-        <a href="" class="logo"
-          ><img src="./images/Union.svg" alt="icons" />photo</a
-        >
-        <ul class="footer-list list">
-          <li><a class="footer-link" href="">Help desk</a></li>
-          <li><a class="footer-link" href="">Blog</a></li>
-          <li><a class="footer-link" href="">Resources</a></li>
-        </ul>
+        <div class="footer">
+          <ul class="footer-list list">
+            <li class="item"><a class="footer-link" href="">Mobile app</a></li>
+            <li class="item"><a class="footer-link" href="">Community</a></li>
+            <li class="item"><a class="footer-link" href="">Company</a></li>
+          </ul>
+          <a href="" class="logo"
+            ><img src="./images/Union.svg" alt="icons" />photo</a
+          >
+          <ul class="footer-list list">
+            <li class="item"><a class="footer-link" href="">Help desk</a></li>
+            <li class="item"><a class="footer-link" href="">Blog</a></li>
+            <li class="item"><a class="footer-link" href="">Resources</a></li>
+          </ul>
+        </div>
         <ul class="soc-list list">
-          <li>
+          <li class="item">
             <a class="soc-link" href="" aria-label="Facebook">Facebook</a>
           </li>
-          <li>
+          <li class="item">
             <a class="soc-link" href="" aria-label="LinkedIn">LinkedIn</a>
           </li>
-          <li><a class="soc-link" href="" aria-label="Twitter">Twitter</a></li>
-          <li>
+          <li class="item">
+            <a class="soc-link" href="" aria-label="Twitter">Twitter</a>
+          </li>
+          <li class="item">
             <a class="soc-link" href="" aria-label="Telegram">Telegram</a>
           </li>
         </ul>
