Добавление спрайта  и стилей

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
+    <header class="header">
       <nav class="container header-nav">
         <a href="/" class="logo"
           ><img src="./images/Union.svg" alt="icons" />photo</a
@@ -97,7 +97,7 @@
       </section>
 
       <!-- Examples works -->
-      <section class="section no-padding">
+      <section class="section work-section no-padding">
         <div class="container">
           <h2 class="section-title">Examples</h2>
           <ul class="work-list list">
@@ -206,7 +206,7 @@
       </section>
     </main>
     <!-- Футер -->
-    <footer class="section">
+    <footer class="section footer-section">
       <div class="container">
         <div class="footer">
           <ul class="footer-list list">
@@ -225,16 +225,32 @@
         </div>
         <ul class="soc-list list">
           <li class="item">
-            <a class="soc-link" href="" aria-label="Facebook">Facebook</a>
+            <a class="soc-link" href="" aria-label="Facebook">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
           </li>
           <li class="item">
-            <a class="soc-link" href="" aria-label="LinkedIn">LinkedIn</a>
+            <a class="soc-link" href="" aria-label="LinkedIn">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
           </li>
           <li class="item">
-            <a class="soc-link" href="" aria-label="Twitter">Twitter</a>
+            <a class="soc-link" href="" aria-label="Twitter">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
           </li>
           <li class="item">
-            <a class="soc-link" href="" aria-label="Telegram">Telegram</a>
+            <a class="soc-link" href="" aria-label="Instagram">
+              <svg class="icon" width="20" height="20">
+                <use href="./images/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
         </ul>
         <p class="footer-text">&#169; Photo, Inc. 2019. We love our users!</p>
