Добавление ховера лишкам

--- a/index.html
+++ b/index.html
@@ -216,7 +216,8 @@
             <li class="item"><a class="footer-link" href="">Company</a></li>
           </ul>
           <a href="" class="logo"
-            ><img src="./images/Union.svg" alt="icons" />photo</a
+            ><svg class="icon-logo" width="22" height="22">
+              <use href="./images/sprite.svg#icon-union"></use></svg>photo</a
           >
           <ul class="footer-list list">
             <li class="item"><a class="footer-link" href="">Help desk</a></li>
